# pipelines-hackathon

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  LICENSE  Makefile  Preprocessing.ipynb  README.md  dataset.py  preprocess.py  pyproject.toml  read_ds.py  setup.py  train.py
data/: .gitignore
model_trainer/: Dockerfile  Makefile  setup.py
model_trainer/trainer/: task.py
trainer/: task.py
