[tool.poetry]
name = "pipelines-hackathon"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
notebook = "^6.4.4"
tensorflow = "^2.6.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
