[tool.poetry]
name = "pipelines-hackathon"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
notebook = "^6.4.4"
tensorflow = "^2.6.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
apache-beam = {extras = ["gcp"], version = "^2.32.0"}
tensorflow-transform = "^1.3.0"
google-cloud-storage = "^1.42.2"
scipy = "^1.7.1"
fsspec = "^2021.8.1"
gcsfs = "^2021.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "<21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
